--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="light">
         <header id="profile">
-            <img class="avatar" src="./assets/abn.png" alt="" srcset="">
+            <img class="avatar" src="https://avatars.githubusercontent.com/u/19639198" alt="" srcset="">
             <p>@aldoneto</p>                                                  <!-- name="sunny-outline" -->
             <button class="button" onclick="switchMode()"><ion-icon id="iconbtn" size="large" name="moon-outline"></ion-icon></button>
         </header>
