--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         </footer>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <script src="/scripts.js"></script>
+        <script src="https://github.com/Abn1231/Discover/edit/main/scripts.js"></script>
     </body>
 </html>
